Updated email address to personal email and not UCLA one

--- a/resume_gavrilenko.tex
+++ b/resume_gavrilenko.tex
@@ -35,7 +35,7 @@
 % Header
 \begin{center}
     \textbf{\Large Dennis Gavrilenko} \\
-    (925) 470-7127 \,|\, \href{mailto:dennisg009@g.ucla.edu}{dennisg009@g.ucla.edu} \,|\, \href{http://www.linkedin.com/in/dennis-gavrilenko}{linkedin.com/in/dennis-gavrilenko} \,|\, \href{http://www.interosity.co}{interosity.co}
+    (925) 470-7127 \,|\, \href{mailto:dennisg009@gmail.com}{dennisg009@gmail.com} \,|\, \href{http://www.linkedin.com/in/dennis-gavrilenko}{linkedin.com/in/dennis-gavrilenko} \,|\, \href{http://www.interosity.co}{interosity.co}
 \end{center}
 
 % Education Section
