Changed formatting of Education section, corrected final GPA, removed incomplete Geology minor, removed irrelevant courses

--- a/Dennis_Gavrilenko_Resume.tex
+++ b/Dennis_Gavrilenko_Resume.tex
@@ -1,4 +1,4 @@
-\documentclass[10.5pt]{article}
+\documentclass[10pt]{article}
 
 % Packages
 \usepackage[margin=0.5in]{geometry}
@@ -35,21 +35,20 @@
 % Header
 \begin{center}
     \textbf{\Large Dennis Gavrilenko} \\
-    (925) 470-7127 \,|\, \href{mailto:dennisg009@gmail.com}{dennisg009@gmail.com} \,|\, \href{http://www.linkedin.com/in/dennis-gavrilenko}{linkedin.com/in/dennis-gavrilenko} \,|\, \href{http://www.interosity.co}{interosity.co}
+    (925) 470-7127 \textbar\ \href{mailto:dennisg009@gmail.com}{dennisg009@gmail.com} \textbar\ \href{http://www.linkedin.com/in/dennis-gavrilenko}{linkedin.com/in/dennis-gavrilenko} \textbar\ \href{http://www.interosity.co}{interosity.co}
 \end{center}
 
 % Education Section
 \section{EDUCATION}
 
-\textbf{University of California, Los Angeles (UCLA)} \hfill Los Angeles, CA \\
-\textit{B.A. in Business Economics, Minors in Data Science Engineering, Geology} \hfill Sep 2021 -- Mar 2025 \\
-GPA: 3.8/4.0, Dean's Honor List \,|\, SAT: 1580, ACT: 35 \\
-\textbf{Relevant Coursework:} Natural Language Processing, Computer Vision, Data Science, Intro to Machine Learning, Econometrics, Intro to Computer Science I/II, Programming in R, Linear Algebra, Micro/Macroeconomic Theory, Probability Theory, Calculus I/II/III, Intro Accounting
+\textbf{University of California, Los Angeles (UCLA)} \textbar\ Los Angeles, CA \hfill \textbf{Sep 2021 -- Mar 2025} \\
+\textit{B.A. in Business Economics, Minor in Data Science Engineering} \textbar\ GPA: 3.7/4.0, Dean's Honor List \textbar\ SAT: 1580, ACT: 35 \\
+\textbf{Relevant Coursework:} Natural Language Processing, Computer Vision, Data Science, Intro to ML, Econometrics, \\ Programming in R, Intro to Computer Science I/II, Linear Algebra, Probability Theory, Calculus I/II/III
 
 \vspace{5pt}
 
-\textbf{Sciences Po} \hfill Paris, France \\
-\textit{Semester Exchange: International Trade \& Finance, Labor Economics, Corporate Governance, French Imperial History, French A1} \hfill Aug 2023 -- Dec 2023
+\textbf{Sciences Po} \textbar\ Paris, France \hfill \textbf{Aug 2023 -- Dec 2023} \\
+\textit{Semester Exchange: International Trade \& Finance, Labor Economics, Corporate Governance, French Imperial History}
 
 % Professional Experience Section
 \section{PROFESSIONAL EXPERIENCE}
