Added state to location data, bolded dates

--- a/Dennis_Gavrilenko_Resume.tex
+++ b/Dennis_Gavrilenko_Resume.tex
@@ -19,7 +19,7 @@
 
 % Custom command for job entries
 \newcommand{\jobtitle}[4]{
-    \textbf{#1} \textbar\ \textit{#2} \textbar\ #3 \hfill #4
+    \textbf{#1} \textbar\ \textit{#2} \textbar\ #3 \hfill \textbf{#4}
 }
 
 % Custom command for job descriptions
@@ -53,7 +53,7 @@
 % Professional Experience Section
 \section{PROFESSIONAL EXPERIENCE}
 
-\jobtitle{UCLA Undergraduate Admission}{Campus Tour Guide}{Los Angeles}{Jan 2023 -- Mar 2025}
+\jobtitle{UCLA Undergraduate Admission}{Campus Tour Guide}{Los Angeles, CA}{Jan 2023 -- Mar 2025}
 \jobdesc{
     \item Providing in-depth, informative, 90-minute tours of the UCLA campus to 2000+ guests (prospective and admitted students).
     \item Showing everyone how wonderful and amazing UCLA is and encouraging thousands of students to pursue higher education.
@@ -61,7 +61,7 @@
 
 \vspace{3pt}
 
-\jobtitle{Boston Consulting Group (BCG)}{Summer Associate}{Seattle}{Jun 2024 -- Aug 2024}
+\jobtitle{Boston Consulting Group (BCG)}{Summer Associate}{Seattle, WA}{Jun 2024 -- Aug 2024}
 \jobdesc{
     \item Recommended strategies for a major US family foundation's board to reduce staff tensions and streamline operations.
     \item Interviewed 20+ executives, board members, and industry leaders to identify best operations practices to address pain points.
@@ -71,7 +71,7 @@
 
 \vspace{3pt}
 
-\jobtitle{The Kraft Heinz Company}{Product Manager Intern}{Chicago}{Jun 2023 -- Aug 2023}
+\jobtitle{The Kraft Heinz Company}{Product Manager Intern}{Chicago, IL}{Jun 2023 -- Aug 2023}
 \jobdesc{
     \item Built four dashboards for digital supply chain team to make data-driven decisions while managing 15+ stakeholder interests.
     \item Created an interactive data visualization model with Excel pivot tables, decreasing unordered customer inventory by 20\%.
@@ -80,7 +80,7 @@
 
 \vspace{3pt}
 
-\jobtitle{Amazon Prime Gaming}{Product Consultant}{Los Angeles}{Apr 2023 -- Jun 2023}
+\jobtitle{Amazon Prime Gaming}{Product Consultant}{Los Angeles, CA}{Apr 2023 -- Jun 2023}
 \jobdesc{
     \item Developed a product roadmap and designed 5+ high-fidelity mock-ups in Figma for Amazon Prime Gaming's website.
     \item Created two strategies to gamify UX with weekly website prizes, increasing user retention by 25\% and signups by 10\%.
@@ -88,7 +88,7 @@
 
 \vspace{3pt}
 
-\jobtitle{kommu}{Product Manager Intern}{Los Angeles}{Mar 2023 -- Jun 2023}
+\jobtitle{kommu}{Product Manager Intern}{Los Angeles, CA}{Mar 2023 -- Jun 2023}
 \jobdesc{
     \item Planned technical feature set and designed 20+ high-fidelity mock-ups in Figma for a tech startup's new web portal login.
     \item Analyzed 200+ user's data to determine top growing markets and recommended three new marketing strategies for Q3, Q4.
@@ -96,7 +96,7 @@
 
 \vspace{3pt}
 
-\jobtitle{Hussle}{Marketing Lead}{Los Angeles}{Aug 2022 -- Dec 2022}
+\jobtitle{Hussle}{Marketing Lead}{Los Angeles, CA}{Aug 2022 -- Dec 2022}
 \jobdesc{
     \item Collaborated with development and customer success teams to create two new startup app features based on user feedback.
     \item Directed all marketing operations, created a \$3000 marketing budget, distributed 1000+ flyers, organized 3 outreach efforts.
@@ -104,7 +104,7 @@
 
 \vspace{3pt}
 
-\jobtitle{First Republic Bank}{Lending Services Intern}{San Francisco}{Jun 2022 -- Sep 2022}
+\jobtitle{First Republic Bank}{Lending Services Intern}{San Francisco, CA}{Jun 2022 -- Sep 2022}
 \jobdesc{
     \item Built a dashboard with pivot tables and Excel VBA to analyze 100+ intern surveys and recommend 3 areas for improvement.
     \item Digitized the bank's paper housing records system to simplify access and increase loan closing efficiency by 25\%.
@@ -114,7 +114,7 @@
 % Leadership and Volunteer Section
 \section{LEADERSHIP AND VOLUNTEER EXPERIENCE}
 
-\jobtitle{The Bruin Group Consulting}{Project Manager, Senior Consultant}{Los Angeles}{Jan 2022 -- Mar 2025}
+\jobtitle{The Bruin Group Consulting}{Project Manager, Senior Consultant}{Los Angeles, CA}{Jan 2022 -- Mar 2025}
 \jobdesc{
     \item Led a 10-week, 5-person project to create growth strategies to increase a startup carpooling service's user base by 300\%.
     \item Created a developer marketing strategy and implementation timeline for a startup's SaaS and API products.
@@ -122,7 +122,7 @@
 
 \vspace{3pt}
 
-\jobtitle{Boy Scouts of America}{Senior Patrol Leader, Quartermaster}{Antioch}{Feb 2014 -- Sep 2021}
+\jobtitle{Boy Scouts of America}{Senior Patrol Leader, Quartermaster}{Antioch, CA}{Feb 2014 -- Sep 2021}
 \jobdesc{
     \item Led my troop of 20+ Scouts on extended camping trips, earned 51 merit badges, advanced 10+ younger Scouts' ranks.
     \item Participated in several city clean-ups and Christmas tree pickups while volunteering hundreds of community service hours.
