Changed classes to italics to keep bold font to university-names only

--- a/Dennis_Gavrilenko_Resume.tex
+++ b/Dennis_Gavrilenko_Resume.tex
@@ -42,8 +42,8 @@
 \section{EDUCATION}
 
 \textbf{University of California, Los Angeles (UCLA)} \textbar\ Los Angeles, CA \hfill \textbf{Sep 2021 -- Mar 2025} \\
-\textit{B.A. in Business Economics, Minor in Data Science Engineering} \textbar\ GPA: 3.7/4.0, Dean's Honor List \textbar\ SAT: 1580, ACT: 35 \\
-\textbf{Relevant Coursework:} Natural Language Processing, Computer Vision, Data Science, Intro to ML, Econometrics, \\ Programming in R, Intro to Computer Science I/II, Linear Algebra, Probability Theory, Calculus I/II/III
+B.A. in Business Economics, Minor in Data Science Engineering \textbar\ GPA: 3.7/4.0, Dean's Honor List \textbar\ SAT: 1580, ACT: 35 \\
+\textit{Relevant Coursework: Natural Language Processing, Computer Vision, Data Science, Intro to ML, Econometrics, \\ Programming in R, Intro to Computer Science I/II, Linear Algebra, Probability Theory, Calculus I/II/III}
 
 \vspace{5pt}
 
