Updated tour guide bullet points

--- a/Dennis_Gavrilenko_Resume.tex
+++ b/Dennis_Gavrilenko_Resume.tex
@@ -55,8 +55,8 @@ B.A. in Business Economics, Minor in Data Science Engineering \textbar\ GPA: 3.7
 
 \jobtitle{UCLA Undergraduate Admission}{Campus Tour Guide}{Los Angeles, CA}{Jan 2023 -- Mar 2025}
 \jobdesc{
-    \item Providing in-depth, informative, 90-minute tours of the UCLA campus to 2000+ guests (prospective and admitted students).
-    \item Showing everyone how wonderful and amazing UCLA is and encouraging thousands of students to pursue higher education.
+    \item Provided in-depth, informative, 90-minute tours of the UCLA campus to 2000+ guests (prospective/admitted students).
+    \item Showed everyone how wonderful and amazing UCLA is and encouraged thousands of students to pursue higher education.
 }
 
 \vspace{3pt}
