Updated BCG bullet points

--- a/Dennis_Gavrilenko_Resume.tex
+++ b/Dennis_Gavrilenko_Resume.tex
@@ -64,9 +64,9 @@ B.A. in Business Economics, Minor in Data Science Engineering \textbar\ GPA: 3.7
 \jobtitle{Boston Consulting Group (BCG)}{Summer Associate}{Seattle, WA}{Jun 2024 -- Aug 2024}
 \jobdesc{
     \item Recommended strategies for a major US family foundation's board to reduce staff tensions and streamline operations.
-    \item Interviewed 20+ executives, board members, and industry leaders to identify best operations practices to address pain points.
-    \item Led an extensive analysis of 15+ major US cities to identify the best location for an upcoming headquarters move.
-    \item Conducted a peer benchmarking analysis to identify foundation's weak points in OpEx, grantmaking efficiency, and impact.
+    \item Interviewed 20+ executives, board members, industry leaders to identify best operations practices to address pain points.
+    \item Led an extensive analysis of 40+ major US cities to identify the best location for an upcoming headquarters move.
+    \item Conducted a peer benchmarking analysis to identify client's weak points in OpEx, grantmaking efficiency, and impact.
 }
 
 \vspace{3pt}
