Updated Kraft Heinz bullet points

--- a/Dennis_Gavrilenko_Resume.tex
+++ b/Dennis_Gavrilenko_Resume.tex
@@ -73,8 +73,8 @@ B.A. in Business Economics, Minor in Data Science Engineering \textbar\ GPA: 3.7
 
 \jobtitle{The Kraft Heinz Company}{Product Manager Intern}{Chicago, IL}{Jun 2023 -- Aug 2023}
 \jobdesc{
-    \item Built four dashboards for digital supply chain team to make data-driven decisions while managing 15+ stakeholder interests.
-    \item Created an interactive data visualization model with Excel pivot tables, decreasing unordered customer inventory by 20\%.
+    \item Helped build four data-driven dashboards for digital supply chain team while managing 15+ stakeholder interests.
+    \item Created an interactive visualization model with Excel pivot tables, decreasing unordered customer inventory by 20\%.
     \item Coordinated product development with 10+ data engineers and UX designers to align product vision with business goals.
 }
 
