Updated kommu and Hussle bullet points

--- a/Dennis_Gavrilenko_Resume.tex
+++ b/Dennis_Gavrilenko_Resume.tex
@@ -90,16 +90,16 @@ B.A. in Business Economics, Minor in Data Science Engineering \textbar\ GPA: 3.7
 
 \jobtitle{kommu}{Product Manager Intern}{Los Angeles, CA}{Mar 2023 -- Jun 2023}
 \jobdesc{
-    \item Planned technical feature set and designed 20+ high-fidelity mock-ups in Figma for a tech startup's new web portal login.
-    \item Analyzed 200+ user's data to determine top growing markets and recommended three new marketing strategies for Q3, Q4.
+    \item Planned technical feature set and designed 20+ high-fidelity mock-ups in Figma for a startup's new web portal login.
+    \item Analyzed 200+ users' data to determine top growing markets, recommended three new marketing strategies for Q3, Q4.
 }
 
 \vspace{3pt}
 
 \jobtitle{Hussle}{Marketing Lead}{Los Angeles, CA}{Aug 2022 -- Dec 2022}
 \jobdesc{
-    \item Collaborated with development and customer success teams to create two new startup app features based on user feedback.
-    \item Directed all marketing operations, created a \$3000 marketing budget, distributed 1000+ flyers, organized 3 outreach efforts.
+    \item Collaborated with development and customer success teams to create two new app features based on user feedback.
+    \item Directed all marketing operations, created \$3000 marketing budget, distributed 1000+ flyers, organized 3 outreach efforts.
 }
 
 \vspace{3pt}
