Updated FRB bullet points

--- a/Dennis_Gavrilenko_Resume.tex
+++ b/Dennis_Gavrilenko_Resume.tex
@@ -106,9 +106,9 @@ B.A. in Business Economics, Minor in Data Science Engineering \textbar\ GPA: 3.7
 
 \jobtitle{First Republic Bank}{Lending Services Intern}{San Francisco, CA}{Jun 2022 -- Sep 2022}
 \jobdesc{
-    \item Built a dashboard with pivot tables and Excel VBA to analyze 100+ intern surveys and recommend 3 areas for improvement.
-    \item Digitized the bank's paper housing records system to simplify access and increase loan closing efficiency by 25\%.
-    \item Continuously communicated and implemented changing needs for 40+ stakeholders, including 2 managers and 35+ clients.
+    \item Digitized paper housing records system to simplify documentation access and increase loan closing team's efficiency.
+    \item Built Excel dashboard with pivot tables and VBA to analyze 100+ intern surveys, recommended 3 areas for improvement.
+    \item Continuously communicated, implemented changing needs for 40+ stakeholders, including 2 managers and 35+ clients.
 }
 
 % Leadership and Volunteer Section
