Updated BSA bullet points

--- a/Dennis_Gavrilenko_Resume.tex
+++ b/Dennis_Gavrilenko_Resume.tex
@@ -125,8 +125,8 @@ B.A. in Business Economics, Minor in Data Science Engineering \textbar\ GPA: 3.7
 \jobtitle{Boy Scouts of America}{Senior Patrol Leader, Quartermaster}{Antioch, CA}{Feb 2014 -- Sep 2021}
 \jobdesc{
     \item Led my troop of 20+ Scouts on extended camping trips, earned 51 merit badges, advanced 10+ younger Scouts' ranks.
-    \item Participated in several city clean-ups and Christmas tree pickups while volunteering hundreds of community service hours.
-    \item Volunteered in 13 Eagle Scout Projects, earned 2 Eagle Scout Mentor pins, completed National Youth Leadership Training.
+    \item Participated in several city clean-ups, Christmas tree pickups while volunteering hundreds of community service hours.
+    \item Volunteered in 13 Eagle Scout Projects, earned 2 Eagle Scout Mentor pins, National Youth Leadership Training.
 }
 
 % Skills Section
