Added more interests, polished "Additional" section

--- a/Dennis_Gavrilenko_Resume.tex
+++ b/Dennis_Gavrilenko_Resume.tex
@@ -41,14 +41,14 @@
 % Education Section
 \section{EDUCATION}
 
-\textbf{University of California, Los Angeles (UCLA)} \textbar\ Los Angeles, CA \hfill \textbf{Sep 2021 -- Mar 2025} \\
-B.A. in Business Economics, Minor in Data Science Engineering \textbar\ GPA: 3.7/4.0, Dean's Honor List \textbar\ SAT: 1580, ACT: 35 \\
-\textit{Relevant Coursework: Natural Language Processing, Computer Vision, Data Science, Intro to ML, Econometrics, \\ Programming in R, Intro to Computer Science I/II, Linear Algebra, Probability Theory, Calculus I/II/III}
+\textbf{University of California, Los Angeles (UCLA)} \textbar\ \textit{B.A. in Business Economics, Minor in Data Science Engineering} \textbar\ Los Angeles, CA \hfill \textbf{Sep 2021 -- Mar 2025} \\
+GPA: 3.7/4.0, Dean's Honor List \textbar\ SAT: 1580, ACT: 35 \\
+\textit{Relevant Coursework: Natural Language Processing, Computer Vision, Data Science, Intro to ML, Econometrics, \\ Programming in R, Intro to Computer Science I/II, Linear Algebra, Probability Theory, Calculus I/II/III, Intro Accounting}
 
 \vspace{5pt}
 
-\textbf{Sciences Po} \textbar\ Paris, France \hfill \textbf{Aug 2023 -- Dec 2023} \\
-\textit{Semester Exchange: International Trade \& Finance, Labor Economics, Corporate Governance, French Imperial History}
+\textbf{Sciences Po} \textbar\ \textit{Semester Exchange} \textbar\ Paris, France \hfill \textbf{Aug 2023 -- Dec 2023} \\
+\textit{International Trade \& Finance, Labor Economics, Corporate Governance, French Imperial History}
 
 % Professional Experience Section
 \section{PROFESSIONAL EXPERIENCE}
@@ -136,14 +136,14 @@ B.A. in Business Economics, Minor in Data Science Engineering \textbar\ GPA: 3.7
 
 \vspace{3pt}
 
-\textbf{Languages:} Fluent in Russian and English, learning French so that I can talk to the Parisian baker in my neighborhood.
+\textbf{Languages:} Fluent in English and Russian, learning French so that I can talk to the Parisian baker in my neighborhood.
 
 \vspace{3pt}
 
-\textbf{Achievements:} Backpacked the Pacific Crest Trail (2025), Eagle Scout, WayUp Top 100 Intern (2023), LA Marathon finisher (2023, 2024), SF Marathon finisher (2024), climbed highest volcano in CA (Mt. Shasta) twice.
+\textbf{Achievements:} Backpacked the Pacific Crest Trail (2025), Eagle Scout, LA Marathon finisher (2023, 2024), SF Marathon finisher (2024), climbed highest volcano in CA (Mt. Shasta) twice, curated art gallery in LA, WayUp Top 100 Intern (2023).
 
 \vspace{3pt}
 
-\textbf{Interests:} Growing ghost peppers, science fiction novels, juggling, poker, geology, raising chickens, Roman archaeology.
+\textbf{Interests:} Growing ghost peppers, reading science fiction novels, juggling, poker, geology, raising chickens, postcards, \\ Roman archaeology, playing the accordion, long-distance cycling, blogging on Substack, Blokus, hitchhiking, regular hiking.
 
 \end{document}
