Made the navy blue darker

--- a/Dennis_Gavrilenko_Resume.tex
+++ b/Dennis_Gavrilenko_Resume.tex
@@ -8,7 +8,7 @@
 \usepackage{xcolor}
 
 % Define colors
-\definecolor{darkblue}{RGB}{0, 51, 102}
+\definecolor{darkblue}{RGB}{0, 25, 51}
 
 % Formatting for section titles
 \titleformat{\section}{\large\bfseries\color{darkblue}}{}{0em}{}[\titlerule]
@@ -41,14 +41,14 @@
 % Education Section
 \section{EDUCATION}
 
-\textbf{University of California, Los Angeles (UCLA)} \textbar\ \textit{B.A. in Business Economics, Minor in Data Science Engineering} \textbar\ Los Angeles, CA \hfill \textbf{Sep 2021 -- Mar 2025} \\
-GPA: 3.7/4.0, Dean's Honor List \textbar\ SAT: 1580, ACT: 35 \\
+\textbf{University of California, Los Angeles (UCLA)} \textbar\ Los Angeles, CA \hfill \textbf{Sep 2021 -- Mar 2025} \\
+B.A. in Business Economics, Minor in Data Science Engineering \textbar\ GPA: 3.7/4.0, Dean's Honor List \textbar\ SAT: 1580, ACT: 35 \\
 \textit{Relevant Coursework: Natural Language Processing, Computer Vision, Data Science, Intro to ML, Econometrics, \\ Programming in R, Intro to Computer Science I/II, Linear Algebra, Probability Theory, Calculus I/II/III, Intro Accounting}
 
 \vspace{5pt}
 
-\textbf{Sciences Po} \textbar\ \textit{Semester Exchange} \textbar\ Paris, France \hfill \textbf{Aug 2023 -- Dec 2023} \\
-\textit{International Trade \& Finance, Labor Economics, Corporate Governance, French Imperial History}
+\textbf{Sciences Po} \textbar\ Paris, France \hfill \textbf{Aug 2023 -- Dec 2023} \\
+\textit{Semester Exchange: International Trade \& Finance, Labor Economics, Corporate Governance, French Imperial History}
 
 % Professional Experience Section
 \section{PROFESSIONAL EXPERIENCE}
