Removed page number

--- a/Dennis_Gavrilenko_Resume.tex
+++ b/Dennis_Gavrilenko_Resume.tex
@@ -29,6 +29,9 @@
     \end{itemize}
 }
 
+% Remove page numbers
+\pagestyle{empty}
+
 % Start document
 \begin{document}
 
@@ -132,7 +135,7 @@ B.A. in Business Economics, Minor in Data Science Engineering \textbar\ GPA: 3.7
 % Skills Section
 \section{SKILLS AND INTERESTS}
 
-\textbf{Programming Skills:} Data Analysis (Python, R, SQL, VBA, Power BI, Excel, PowerPoint), Project Management (Jira, Notion, Agile Development, Scrum), Product Marketing (User Research, A/B Testing, Setting KPIs), Java, C++.
+\textbf{Programming Skills:} Data Analysis (Python, R, SQL, VBA, Excel, PowerPoint), Project Management (Jira, Notion, Agile Development, Scrum), Product Marketing (User Research, A/B Testing, Setting KPIs), Java, C++.
 
 \vspace{3pt}
 
